--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,28 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="apple-touch-icon" href="/src/assets/icon.png" />
+        <meta name="theme-color" content="#317EFB" />
         <title>Petgram</title>
     </head>
     <body>
         <div id="app"></div>
+        <noscript>
+            <h3>Esta app necesita Javascript para anunciar</h3>
+        </noscript>
+        <script>
+            if ("serviceWorker" in navigator) {
+                window.addEventListener("load", function () {
+                    navigator.serviceWorker
+                        .register("/service-worker.js")
+                        .then((registration) => {
+                            console.log("SW registrado");
+                        })
+                        .catch((registrationError) => {
+                            console.log("SW error", registrationError);
+                        });
+                });
+            }
+        </script>
     </body>
 </html>
